Add a --with-cuda argument to bootstrap script.

--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -1,3 +1,7 @@
+# Python package dependencies.
+# This file is copied to $ROOT/requirements.txt during bootstrap. The reason
+# for this is because the TensorFlow package is replaced with tensorflow-gpu
+# if --with-cuda is enabled.
 absl-py==0.1.10
 appdirs==1.4.3
 appnope==0.1.0
@@ -109,7 +113,7 @@ six==1.11.0
 SQLAlchemy==1.2.4
 statistics==1.0.3.5
 subprocess32==3.5.0
-# TODO(cec): Set this during bootstrap.
+# If project is bootstrapped with --with-cuda, tensorflow-gpu is used.
 tensorflow==1.0
 terminado==0.8.1
 testpath==0.3.1
