Fix Linux lib paths.

--- a/deeplearning/clgen/native/BUILD
+++ b/deeplearning/clgen/native/BUILD
@@ -196,10 +196,10 @@ cc_binary(
             "-lz",
         ],
         "//conditions:default": [
-            "-Wl,-rpath,/usr/local/opt/llvm/lib",
+            "-Wl,-rpath,/home/linuxbrew/.linuxbrew/opt/lib",
             "-L/home/linuxbrew/.linuxbrew/opt/gcc/lib64",
             "-Wl,-rpath,/home/linuxbrew/.linuxbrew/opt/gcc/lib64",
-            "-L/usr/local/opt/llvm/lib",
+            "-L/home/linuxbrew/.linuxbrew/opt/lib",
             "-lLLVMLTO",
             "-lLLVMPasses",
             "-lLLVMObjCARCOpts",
@@ -689,10 +689,10 @@ cc_binary(
             "-lz",
         ],
         "//conditions:default": [
-            "-Wl,-rpath,/usr/local/opt/llvm/lib",
+            "-Wl,-rpath,/home/linuxbrew/.linuxbrew/opt/llvm/lib",
             "-L/home/linuxbrew/.linuxbrew/opt/gcc/lib64",
             "-Wl,-rpath,/home/linuxbrew/.linuxbrew/opt/gcc/lib64",
-            "-L/usr/local/opt/llvm/lib",
+            "-L/home/linuxbrew/.linuxbrew/opt/llvm/lib",
             "-lLLVMLTO",
             "-lLLVMPasses",
             "-lLLVMObjCARCOpts",
