--- a/deeplearning/deepsmith/cli/BUILD
+++ b/deeplearning/deepsmith/cli/BUILD
@@ -1,24 +1,10 @@
 py_binary(
-    name = "import",
-    srcs = ["import.py"],
-    deps = [
-        "//deeplearning/deepsmith:datastore",
-        "//deeplearning/deepsmith:db",
-        "//deeplearning/deepsmith:result",
-        "//deeplearning/deepsmith:testcase",
-        "//deeplearning/deepsmith/proto:deepsmith",
-        "//lib/labm8:pbutil",
-    ],
-)
-
-py_binary(
     name = "explore",
     srcs = ["explore.py"],
     deps = [
         "//deeplearning/deepsmith:datastore",
         "//deeplearning/deepsmith:db",
         "//deeplearning/deepsmith:result",
-        "//deeplearning/deepsmith/proto:deepsmith",
         "//lib/labm8:pbutil",
     ],
 )
@@ -27,8 +13,22 @@ py_binary(
     name = "generate_testcases",
     srcs = ["generate_testcases.py"],
     deps = [
-        "//deeplearning/deepsmith/proto:deepsmith",
+        "//deeplearning/deepsmith/proto:datastore_py_pb2",
+        "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        "//deeplearning/deepsmith/proto:generator_py_pb2",
         "//deeplearning/deepsmith/services",
+    ],
+)
+
+py_binary(
+    name = "import",
+    srcs = ["import.py"],
+    deps = [
+        "//deeplearning/deepsmith:datastore",
+        "//deeplearning/deepsmith:db",
+        "//deeplearning/deepsmith:result",
+        "//deeplearning/deepsmith:testcase",
+        "//lib/labm8:pbutil",
     ],
 )
 
@@ -36,7 +36,9 @@ py_binary(
     name = "run_testcases",
     srcs = ["run_testcases.py"],
     deps = [
-        "//deeplearning/deepsmith/proto:deepsmith",
+        "//deeplearning/deepsmith/proto:datastore_py_pb2",
+        "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//deeplearning/deepsmith/services",
     ],
 )
