--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -94,6 +94,7 @@ pyopencl==2016.2
 pyparsing==2.2.0
 pytest-benchmark==3.1.1
 pytest-cov==2.5.1
+pytest-mock==1.10.0
 pytest==3.4.1
 python-dateutil==2.6.1
 python-utils==2.3.0
