--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -29,6 +29,7 @@ funcsigs==1.0.2
 futures==3.1.1
 grpcio-tools==1.10.0
 grpcio==1.10.0
+h5py==2.7.1
 html5lib==1.0.1
 humanize==0.5.1
 idna==2.6
@@ -44,6 +45,7 @@ jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 jupyter==1.0.0
+Keras==2.1.6
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
@@ -101,6 +103,7 @@ python-utils==2.3.0
 python-xmp-toolkit==2.0.1
 pytools==2018.1
 pytz==2018.3
+pyyaml==3.12
 pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
@@ -115,7 +118,7 @@ SQLAlchemy==1.2.4
 statistics==1.0.3.5
 subprocess32==3.5.0
 # If project is bootstrapped with --with-cuda, tensorflow-gpu is used.
-tensorflow==1.0
+tensorflow==1.8.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0
