Fix bazel deps.

--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -40,8 +40,8 @@ py_binary(
     deps = [
         ":generator",
         ":services",
-        "//deeplearning/clgen:model",
-        "//deeplearning/clgen:sampler",
+        "//deeplearning/clgen:samplers",
+        "//deeplearning/clgen/models",
         "//deeplearning/clgen/proto:internal_py_pb2",
         "//deeplearning/clgen/proto:model_py_pb2",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
