--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ChrisCummins/phd.git"
+  },
+  "devDependencies": {
+    "husky": "^0.14.3"
   }
 }
