--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://github.com/ChrisCummins/phd.git"
   },
+  "scripts": {
+    "precommit": "./tools/buildifier.sh"
+  },
   "devDependencies": {
     "husky": "^0.14.3"
   }
