Add a checksum of the bootstrap script to config.

--- a/config/proto/BUILD
+++ b/config/proto/BUILD
@@ -6,4 +6,5 @@ py_proto_library(
     name = "config",
     protos = ["config.proto"],
     visibility = ["//visibility:public"],
+    deps = ["//lib/labm8:crypto"],
 )
