Use a LockFile proto.

--- a/lib/labm8/BUILD
+++ b/lib/labm8/BUILD
@@ -250,7 +250,10 @@ py_library(
     visibility = ["//visibility:public"],
     deps = [
         ":fs",
+        ":labdate",
+        ":pbutil",
         ":system",
+        "//lib/labm8/proto:lockfile_py_pb2",
     ],
 )
 
