--- a/lib/labm8/proto/BUILD
+++ b/lib/labm8/proto/BUILD
@@ -3,6 +3,12 @@
 load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
 
 py_proto_library(
+    name = "lockfile_py_pb2",
+    protos = ["lockfile.proto"],
+    visibility = ["//lib/labm8:__subpackages__"],
+)
+
+py_proto_library(
     name = "test_protos",
     testonly = 1,
     protos = ["test_protos.proto"],
