Move telemetry proto into separate file.

--- a/deeplearning/clgen/models/BUILD
+++ b/deeplearning/clgen/models/BUILD
@@ -57,6 +57,7 @@ py_library(
         "//deeplearning/clgen/proto:internal_py_pb2",
         "//deeplearning/clgen/proto:model_py_pb2",
         "//deeplearning/clgen/proto:sampler_py_pb2",
+        "//deeplearning/clgen/proto:telemetry_py_pb2",
         "//lib/labm8:crypto",
         "//lib/labm8:labdate",
         "//lib/labm8:lockfile",
@@ -74,6 +75,7 @@ py_test(
         ":models",
         "//deeplearning/clgen:conftest",
         "//deeplearning/clgen/proto:model_py_pb2",
+        "//deeplearning/clgen/proto:telemetry_py_pb2",
         "//lib/labm8:crypto",
         "//lib/labm8:fs",
     ],
