--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -27,6 +27,7 @@ entrypoints==0.2.3
 enum34==1.1.6
 funcsigs==1.0.2
 futures==3.1.1
+fuzzywuzzy==0.16.0
 grpcio-tools==1.10.0
 grpcio==1.10.0
 h5py==2.7.1
@@ -99,6 +100,7 @@ pytest-cov==2.5.1
 pytest-mock==1.10.0
 pytest==3.4.1
 python-dateutil==2.6.1
+python-Levenshtein==0.12.0
 python-utils==2.3.0
 python-xmp-toolkit==2.0.1
 pytools==2018.1
