Add clone list protos.

--- a/experimental/polyglot/baselines/BUILD
+++ b/experimental/polyglot/baselines/BUILD
@@ -3,6 +3,7 @@
 filegroup(
     name = "protos",
     srcs = glob([
+        "clone_lists/**/*.pbtxt",
         "corpuses/**/*.pbtxt",
         "models/**/*.pbtxt",
         "samplers/**/*.pbtxt",
