Work in progress on baseline test.

--- a/experimental/polyglot/baselines/BUILD
+++ b/experimental/polyglot/baselines/BUILD
@@ -25,3 +25,19 @@ py_binary(
         "//lib/labm8:pbutil",
     ],
 )
+
+py_test(
+    name = "test_protos_are_valid",
+    srcs = ["test_protos_are_valid.py"],
+    data = [":protos"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
+    deps = [
+        "//datasets/github/scrape_repos/proto:scrape_repos_py_pb2",
+        "//deeplearning/clgen/proto:corpus_py_pb2",
+        "//deeplearning/clgen/proto:model_py_pb2",
+        "//deeplearning/clgen/proto:sampler_py_pb2",
+        "//lib/labm8:bazelutil",
+        "//lib/labm8:pbutil",
+    ],
+)
