Add Jupyter notebooks.

--- a/experimental/polyglot/baselines/BUILD
+++ b/experimental/polyglot/baselines/BUILD
@@ -8,6 +8,7 @@ filegroup(
         "models/**/*.pbtxt",
         "samplers/**/*.pbtxt",
     ]),
+    visibility = ["//experimental:__subpackages__"],
 )
 
 py_binary(
