--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/ChrisCummins/phd.git"
   },
   "scripts": {
-    "post-commit": "./tools/git/post-commit.sh",
+    "postcommit": "./tools/git/post-commit.sh",
     "precommit": "./tools/git/pre-commit.sh",
     "prepush": "./tools/git/pre-push.sh"
   },
