Fix ACACES build.

--- a/docs/2018_07_acaces/BUILD
+++ b/docs/2018_07_acaces/BUILD
@@ -3,13 +3,22 @@
 genrule(
     name = "paper",
     srcs = glob([
-        "2018_07_acaces/refs.bib",
-        "2018_07_acaces/**/*.tex",
-        "2018_07_acaces/img/*.pdf",
-        "2018_07_acaces/acaces.bst",
-        "2018_07_acaces/acaces.cls",
+        "paper.tex",
+        "abstract.tex",
+        "acaces.bst",
+        "acaces.cls",
+        "img/clang-crashes.pdf",
+        "img/deepsmith.pdf",
+        "img/vs-clsmith.pdf",
+        "postamble.tex",
+        "preamble.tex",
+        "refs.bib",
+        "sec/conclusion.tex",
+        "sec/deepsmith.tex",
+        "sec/eval.tex",
+        "sec/intro.tex",
     ]),
     outs = ["paper.pdf"],
-    cmd = "$(location //tools:autotex) docs/2018_07_acaces/thesis.tex $@",
+    cmd = "$(location //tools:autotex) docs/2018_07_acaces/paper.tex $@",
     tools = ["//tools:autotex"],
 )
