Update ACACES readme.

--- a/docs/2018_07_acaces/BUILD
+++ b/docs/2018_07_acaces/BUILD
@@ -1,22 +1,15 @@
-# Extended abstract for ACACES'18.
+# DeepSmith: Compiler Fuzzing through Deep Learning, ACACES'18.
+
+exports_files(["README.md"])
 
 genrule(
     name = "paper",
     srcs = glob([
-        "paper.tex",
-        "abstract.tex",
+        "**/*.tex",
         "acaces.bst",
         "acaces.cls",
-        "img/clang-crashes.pdf",
-        "img/deepsmith.pdf",
-        "img/vs-clsmith.pdf",
-        "postamble.tex",
-        "preamble.tex",
+        "img/*.pdf",
         "refs.bib",
-        "sec/conclusion.tex",
-        "sec/deepsmith.tex",
-        "sec/eval.tex",
-        "sec/intro.tex",
     ]),
     outs = ["paper.pdf"],
     cmd = "$(location //tools:autotex) docs/2018_07_acaces/paper.tex $@",
