Work in progress on fish experiments.

--- a/experimental/deeplearning/fish/BUILD
+++ b/experimental/deeplearning/fish/BUILD
@@ -3,11 +3,15 @@
 py_binary(
     name = "export_discriminator_training_set",
     srcs = ["export_discriminator_training_set.py"],
-    deps = ["//experimental/fish/proto:fish_py_pb2"],
+    deps = [
+        "//experimental/deeplearning/fish/proto:fish_py_pb2",
+        "//lib/labm8:fs",
+        "//lib/labm8:pbutil",
+    ],
 )
 
 py_binary(
     name = "train_discriminator",
     srcs = ["train_discriminator.py"],
-    deps = ["//experimental/fish/proto:fish_py_pb2"],
+    deps = ["//experimental/deeplearning/fish/proto:fish_py_pb2"],
 )
