--- a/docs/2018_07_issta/artifact_evaluation/BUILD
+++ b/docs/2018_07_issta/artifact_evaluation/BUILD
@@ -10,7 +10,7 @@ sh_binary(
     name = "install",
     srcs = ["install.sh"],
     data = [
-        "//tools:bootstrap",
+        "//:config_script",
         "//tools:protoc",
     ],
 )
