Add a script to prepare discriminator data.

--- a/experimental/deeplearning/fish/BUILD
+++ b/experimental/deeplearning/fish/BUILD
@@ -1,8 +1,18 @@
 # Experiments in machine learning for compiler test case analysis.
 
 py_binary(
-    name = "export_discriminator_data",
-    srcs = ["export_discriminator_data.py"],
+    name = "export_clang_opencl_dataset",
+    srcs = ["export_clang_opencl_dataset.py"],
+    deps = [
+        "//experimental/deeplearning/fish/proto:fish_py_pb2",
+        "//lib/labm8:fs",
+        "//lib/labm8:pbutil",
+    ],
+)
+
+py_binary(
+    name = "prepare_discriminator_dataset",
+    srcs = ["prepare_discriminator_dataset.py"],
     deps = [
         "//experimental/deeplearning/fish/proto:fish_py_pb2",
         "//lib/labm8:fs",
