--- a/experimental/polyglot/baselines/notebooks/BUILD
+++ b/experimental/polyglot/baselines/notebooks/BUILD
@@ -10,6 +10,7 @@ py_binary(
         "//deeplearning/clgen/proto:corpus_py_pb2",
         "//deeplearning/clgen/proto:model_py_pb2",
         "//deeplearning/clgen/proto:sampler_py_pb2",
+        "//experimental/polyglot/baselines:get_instances",
         "//lib/labm8:bazelutil",
         "//lib/labm8:pbutil",
         "//lib/labm8:viz",
